# cmake-fetchcontent

./: CMakeLists.txt
src/: main.c
